trunk/Archive2/38/3e10535af5281b/output
main.cpp:28:17: error: expected identifier before '<' token
 using namespace <onhands>
                 ^
main.cpp:28:17: error: expected ';' before '<' token
main.cpp:28:17: error: expected unqualified-id before '<' token
main.cpp: In function 'int main2(int, char**)':
main.cpp:50:70: error: 'find_cheapest' was not declared in this scope
   std::vector<onhands::Product> cheapest = find_cheapest(products, 20);
                                                                      ^
